[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxy-vertex-openai"
version = "1.0.0"
description = "Proxy Vertex AI third-party models as an OpenAI-compatible API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "google-auth>=2.30.0",
]

[project.scripts]
proxy-vertex-openai = "proxy_vertex_openai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy_vertex_openai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
